[#156] Fix: 고정비 목록 조회 시 year, month 파라미터 추가